--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- IMP -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twitter Card</title>
-
-    <!-- linking our own styles  -->
+    <title>portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <!-- left block for image -->
       <div class="left">
-        <img class="img" src="images/avatar.png" />
+        <img class="avatar" src="./images/krypton.jpg" alt="krypton" />
       </div>
-
-      <!-- Second block for text content -->
       <div class="right">
-        <h1>@konsolainfotech</h1>
-        <p>HTML and CSS Training By Konsola Infotech Is Awesome</p>
+        <div class="box">
+          <h2 class="subtitle">welcome to my website</h2>
+          <h1 class="title">
+            Hello, I am <span class="bold">madhusudan babar</span>, web designer
+            and developer from MH, India
+          </h1>
+          <p class="para">
+            I passionately learn new languages untill i master them, right now I
+            know
+          </p>
+          <ul class="list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>PHP</li>
+            <li>Python</li>
+            <li>C</li>
+            <li>C++</li>
+          </ul>
+          <a href="#contact" class="cta">connect with me</a>
+        </div>
       </div>
     </div>
   </body>
