switched to sass

--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <div class="left">
-        <img class="avatar" src="./images/krypton.jpg" alt="krypton" />
+      <div class="avatar">
+        <img class="avatar__img" src="./images/krypton.jpg" alt="krypton" />
       </div>
-      <div class="right">
-        <div class="box">
-          <h2 class="subtitle">welcome to my website</h2>
-          <h1 class="title">
-            Hello, I am <span class="bold">madhusudan babar</span>, web designer
-            and developer from MH, India
+      <div class="hero">
+        <div class="hero__box">
+          <h2 class="hero__subtitle">welcome to my website</h2>
+          <h1 class="hero__title">
+            Hello, I am
+            <span class="hero__title hero__title--bold">madhusudan babar</span>,
+            web designer and developer from MH, India
           </h1>
-          <p class="para">
+          <p class="hero__para">
             I passionately learn new languages untill i master them, right now I
             know
           </p>
-          <ul class="list">
+          <ul class="hero__list">
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
