--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./app.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container container--fluid">
       <div class="avatar">
         <img class="avatar__img" src="./images/krypton.jpg" alt="krypton" />
       </div>
@@ -34,6 +35,95 @@
             <li>C++</li>
           </ul>
           <a href="#contact" class="cta">connect with me</a>
+        </div>
+      </div>
+    </div>
+    <div class="container"> 
+      <div class="skills">
+      <div class="skills__meta">
+        <h1 class="skills__title">Student</h1>
+        <h2 class="skills__subtitle">AISSMS's IOIT, Pune</h2>
+        <p class="skills__para">
+          Pursuing BCA At Sandip University, I love about Technology,
+          programming is my Hobby, Also I have interested in Machine Learning
+          and Artificial Inteligence, I have Done project on Docker. I completed
+          Docker training under
+          <span class="bold"
+            >World Record Holder Mr.Vimal daga sir From LinuxWorld pvt Ltd
+            IIEC-Rise</span
+          >
+          I learn HTML, CSS, java, mysql, C, C++, Python, DBMS, ADBMS, Docker.
+        </p>
+        <p class="skills__para">
+          Also I know about Digital Marketing. I am temporary working on Digital
+          Marketing from 6 months. I currently working on SEO & SMO.
+        </p>
+      </div>
+      <div class="skills__right">
+        <figure class="skills__img-box">
+          <img
+            src="./images/madhusudan.jpg"
+            alt="madhusudan babar"
+            class="skills__img"
+          />
+        </figure>
+        <div class="skills__block">
+          <h1 class="skills__title skills__title--white">My Skills</h1>
+          <h2 class="skills__subtitle skills__subtitle--white">
+            Programming Languages
+          </h2>
+          <div class="skills__group">
+            <div class="skill">
+              <div class="skill__row">
+                <h3 class="skill__lang">C</h3>
+                <h3 class="skill__count">90%</h3>
+              </div>
+              <div class="skill__row">
+                <div class="skill__progress"></div>
+                <div class="skill__filled" data-percent="90"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__row">
+                <h3 class="skill__lang">C++</h3>
+                <h3 class="skill__count">75%</h3>
+              </div>
+              <div class="skill__row">
+                <div class="skill__progress"></div>
+                <div class="skill__filled" data-percent="75"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__row">
+                <h3 class="skill__lang">HTML / CSS/ JS</h3>
+                <h3 class="skill__count">85%</h3>
+              </div>
+              <div class="skill__row">
+                <div class="skill__progress"></div>
+                <div class="skill__filled" data-percent="85"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__row">
+                <h3 class="skill__lang">Embedded systems</h3>
+                <h3 class="skill__count">80%</h3>
+              </div>
+              <div class="skill__row">
+                <div class="skill__progress"></div>
+                <div class="skill__filled" data-percent="80"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__row">
+                <h3 class="skill__lang">UI/UX</h3>
+                <h3 class="skill__count">90%</h3>
+              </div>
+              <div class="skill__row">
+                <div class="skill__progress"></div>
+                <div class="skill__filled" data-percent="90"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
