background section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jarallax/1.12.7/jarallax.min.js"
+      integrity="sha512-JpiSiPEgPmeTAnXyH375a9UxAsjoiyO+lpsayQd7Pcl2+tYf4y1beIF25yDMvmAV7dbZUPqh084iT3D6IQOoHg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <link rel="stylesheet" href="styles.css" />
     <script src="./app.js"></script>
   </head>
@@ -38,92 +52,195 @@
         </div>
       </div>
     </div>
-    <div class="container"> 
+    <div class="container">
       <div class="skills">
-      <div class="skills__meta">
-        <h1 class="skills__title">Student</h1>
-        <h2 class="skills__subtitle">AISSMS's IOIT, Pune</h2>
-        <p class="skills__para">
-          Pursuing BCA At Sandip University, I love about Technology,
-          programming is my Hobby, Also I have interested in Machine Learning
-          and Artificial Inteligence, I have Done project on Docker. I completed
-          Docker training under
-          <span class="bold"
-            >World Record Holder Mr.Vimal daga sir From LinuxWorld pvt Ltd
-            IIEC-Rise</span
-          >
-          I learn HTML, CSS, java, mysql, C, C++, Python, DBMS, ADBMS, Docker.
-        </p>
-        <p class="skills__para">
-          Also I know about Digital Marketing. I am temporary working on Digital
-          Marketing from 6 months. I currently working on SEO & SMO.
-        </p>
-      </div>
-      <div class="skills__right">
-        <figure class="skills__img-box">
-          <img
-            src="./images/madhusudan.jpg"
-            alt="madhusudan babar"
-            class="skills__img"
-          />
-        </figure>
-        <div class="skills__block">
-          <h1 class="skills__title skills__title--white">My Skills</h1>
-          <h2 class="skills__subtitle skills__subtitle--white">
-            Programming Languages
-          </h2>
-          <div class="skills__group">
-            <div class="skill">
-              <div class="skill__row">
-                <h3 class="skill__lang">C</h3>
-                <h3 class="skill__count">90%</h3>
+        <div class="skills__meta">
+          <h1 class="skills__title">Student</h1>
+          <h2 class="skills__subtitle">AISSMS's IOIT, Pune</h2>
+          <p class="skills__para">
+            Pursuing BCA At Sandip University, I love about Technology,
+            programming is my Hobby, Also I have interested in Machine Learning
+            and Artificial Inteligence, I have Done project on Docker. I
+            completed Docker training under
+            <span class="bold"
+              >World Record Holder Mr.Vimal daga sir From LinuxWorld pvt Ltd
+              IIEC-Rise</span
+            >
+            I learn HTML, CSS, java, mysql, C, C++, Python, DBMS, ADBMS, Docker.
+          </p>
+          <p class="skills__para">
+            Also I know about Digital Marketing. I am temporary working on
+            Digital Marketing from 6 months. I currently working on SEO & SMO.
+          </p>
+        </div>
+        <div class="skills__right">
+          <figure class="skills__img-box">
+            <img
+              src="./images/madhusudan.jpg"
+              alt="madhusudan babar"
+              class="skills__img"
+            />
+          </figure>
+          <div class="skills__block">
+            <h1 class="skills__title skills__title--white">My Skills</h1>
+            <h2 class="skills__subtitle skills__subtitle--white">
+              Programming Languages
+            </h2>
+            <div class="skills__group">
+              <div class="skill">
+                <div class="skill__row">
+                  <h3 class="skill__lang">C</h3>
+                  <h3 class="skill__count">90%</h3>
+                </div>
+                <div class="skill__row">
+                  <div class="skill__progress"></div>
+                  <div class="skill__filled" data-percent="90"></div>
+                </div>
               </div>
-              <div class="skill__row">
-                <div class="skill__progress"></div>
-                <div class="skill__filled" data-percent="90"></div>
+              <div class="skill">
+                <div class="skill__row">
+                  <h3 class="skill__lang">C++</h3>
+                  <h3 class="skill__count">75%</h3>
+                </div>
+                <div class="skill__row">
+                  <div class="skill__progress"></div>
+                  <div class="skill__filled" data-percent="75"></div>
+                </div>
               </div>
-            </div>
-            <div class="skill">
-              <div class="skill__row">
-                <h3 class="skill__lang">C++</h3>
-                <h3 class="skill__count">75%</h3>
+              <div class="skill">
+                <div class="skill__row">
+                  <h3 class="skill__lang">HTML / CSS/ JS</h3>
+                  <h3 class="skill__count">85%</h3>
+                </div>
+                <div class="skill__row">
+                  <div class="skill__progress"></div>
+                  <div class="skill__filled" data-percent="85"></div>
+                </div>
               </div>
-              <div class="skill__row">
-                <div class="skill__progress"></div>
-                <div class="skill__filled" data-percent="75"></div>
+              <div class="skill">
+                <div class="skill__row">
+                  <h3 class="skill__lang">Embedded systems</h3>
+                  <h3 class="skill__count">80%</h3>
+                </div>
+                <div class="skill__row">
+                  <div class="skill__progress"></div>
+                  <div class="skill__filled" data-percent="80"></div>
+                </div>
               </div>
-            </div>
-            <div class="skill">
-              <div class="skill__row">
-                <h3 class="skill__lang">HTML / CSS/ JS</h3>
-                <h3 class="skill__count">85%</h3>
-              </div>
-              <div class="skill__row">
-                <div class="skill__progress"></div>
-                <div class="skill__filled" data-percent="85"></div>
-              </div>
-            </div>
-            <div class="skill">
-              <div class="skill__row">
-                <h3 class="skill__lang">Embedded systems</h3>
-                <h3 class="skill__count">80%</h3>
-              </div>
-              <div class="skill__row">
-                <div class="skill__progress"></div>
-                <div class="skill__filled" data-percent="80"></div>
-              </div>
-            </div>
-            <div class="skill">
-              <div class="skill__row">
-                <h3 class="skill__lang">UI/UX</h3>
-                <h3 class="skill__count">90%</h3>
-              </div>
-              <div class="skill__row">
-                <div class="skill__progress"></div>
-                <div class="skill__filled" data-percent="90"></div>
+              <div class="skill">
+                <div class="skill__row">
+                  <h3 class="skill__lang">UI/UX</h3>
+                  <h3 class="skill__count">90%</h3>
+                </div>
+                <div class="skill__row">
+                  <div class="skill__progress"></div>
+                  <div class="skill__filled" data-percent="90"></div>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="exp exp--left">
+        <div class="exp__img-box">
+          <img class="exp__img" src="./images/krypton.jpg" alt="" />
+        </div>
+        <div class="exp__info exp__info--brown">
+          <h1 class="exp__title">Experience</h1>
+          <h2 class="exp__subtitle">Previous tasks</h2>
+          <ul class="exp__list">
+            <li class="exp__item">
+              <div class="exp__icon">
+                <i class="fas fa-tv"></i>
+              </div>
+              <div class="exp__meta">
+                <h3 class="exp__heading">
+                  <span class="exp__heading--bold">Digital Marketing</span>
+                  <span class="exp__dates">2019 Sep - 2020 Feb</span>
+                </h3>
+                <p class="exp__desc">
+                  I am working on Digital Marketing from 6 months. I currently
+                  working on SEO & SMO.
+                </p>
+              </div>
+            </li>
+            <li class="exp__item">
+              <div class="exp__icon">
+                <i class="fas fa-tv"></i>
+              </div>
+              <div class="exp__meta">
+                <h3 class="exp__heading">
+                  <span class="exp__heading--bold">Full Stack developer </span>
+                  <span class="exp__dates">2019 Sep - 2020 Feb</span>
+                </h3>
+                <p class="exp__desc">
+                  I am a full stack deveoper specialized in MEVN stack, NuxtJS
+                  especially
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="exp exp--right">
+        <div class="exp__img-box">
+          <img class="exp__img" src="./images/krypton.jpg" alt="" />
+        </div>
+        <div class="exp__info exp__info--yellow">
+          <h1 class="exp__title">Experience</h1>
+          <h2 class="exp__subtitle">Previous tasks</h2>
+          <ul class="exp__list">
+            <li class="exp__item">
+              <div class="exp__icon">
+                <i class="fas fa-tv"></i>
+              </div>
+              <div class="exp__meta">
+                <h3 class="exp__heading">
+                  <span class="exp__heading--bold">Digital Marketing</span>
+                  <span class="exp__dates">2019 Sep - 2020 Feb</span>
+                </h3>
+                <p class="exp__desc">
+                  I am working on Digital Marketing from 6 months. I currently
+                  working on SEO & SMO.
+                </p>
+              </div>
+            </li>
+            <li class="exp__item">
+              <div class="exp__icon">
+                <i class="fas fa-tv"></i>
+              </div>
+              <div class="exp__meta">
+                <h3 class="exp__heading">
+                  <span class="exp__heading--bold">Full Stack developer </span>
+                  <span class="exp__dates">2019 Sep - 2020 Feb</span>
+                </h3>
+                <p class="exp__desc">
+                  I am a full stack deveoper specialized in MEVN stack, NuxtJS
+                  especially
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div
+        class="quote jarallax"
+        data-speed=".9"
+        style="background-image: url('./images/parallax-bg.jpg')"
+      >
+        <!-- <img class="jarallax-img" src="./images/parallax-bg.jpg" alt="" />  -->
+        <div class="quote__box">
+          <i class="fas fa-star quote__icon"></i>
+          <blockquote class="quote__text">
+            When You have learned to snatch the error code from the trap frame,
+            it will be time for you to leave.
+          </blockquote>
         </div>
       </div>
     </div>
