--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
     <script src="./app.js"></script>
   </head>
   <body>
+    <header class="header">
+      <div class="header__logo">
+        <a class="header__link" href="index.html">Krypton </a>
+      </div>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__nav-item">
+            <a href="index.html" class="header__nav-link"> Home </a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#about" class="header__nav-link"> About </a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#exp" class="header__nav-link"> Experiences </a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#testimonial" class="header__nav-link"> Testimonial </a>
+          </li>
+          <li class="header__nav-item">
+            <a href="#contact" class="header__nav-link"> Contact </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <div class="container container--fluid">
       <div class="avatar">
         <img class="avatar__img" src="./images/krypton.jpg" alt="krypton" />
@@ -53,7 +77,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="skills">
+      <div id="about" class="skills">
         <div class="skills__meta">
           <h1 class="skills__title">Student</h1>
           <h2 class="skills__subtitle">AISSMS's IOIT, Pune</h2>
@@ -143,7 +167,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="exp exp--left">
+      <div id="exp" class="exp exp--left">
         <div class="exp__img-box">
           <img class="exp__img" src="./images/krypton.jpg" alt="" />
         </div>
@@ -230,6 +254,7 @@
     </div>
     <div class="container">
       <div
+        id="testimonial"
         class="quote jarallax"
         data-speed=".9"
         style="background-image: url('./images/parallax-bg.jpg')"
@@ -244,5 +269,35 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <p class="footer__copy">Copyright &copy; 2021, Krypton</p>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
