contact form done

--- a/index.html
+++ b/index.html
@@ -269,6 +269,56 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="contact">
+        <form method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSeQyXcTdZ_dtLy3QzziCGWDF7VR2EGASCS-qx1nKu5tJliYSQ/formResponse" class="contact__form" >
+          <h1 class="contact__main-title">Contact me</h1>
+          <input type="text" class="contact__input" placeholder="your name" name="entry.62736705" required>
+          <input type="email" class="contact__input" placeholder="your email" name="entry.634700445" required >
+          <textarea required
+            class="contact__textarea"
+            placeholder="your message"
+            name="entry.1470642427"
+          ></textarea>
+          <button class="contact__btn">Send</button>
+        </form>
+        <div class="contact__right">
+          <div class="contact__img-box">
+            <img class="contact__img" src="./images/madhusudan.jpg" alt="" />
+          </div>
+          <div class="contact__info">
+            <h1 class="contact__title">Contact</h1>
+            <address class="contact__address">
+              Flat no 5,kusumpushpa appt. college road,opposite to
+              dairydon,Nashik
+            </address>
+            <h2 class="contact__heading"> Contact Info</h2>
+              <ul class="contact__list">
+                <li class="contact__item">
+                  <i class="fas fa-phone contact__icon"></i>
+                  <a href="tel:+918888888888" class="contact__link">
+                    +91 8888888888
+                  </a>
+                </li>
+                <li class="contact__item">
+                  <i class="fas fa-envelope contact__icon"></i>
+                  <a href="mailto:contact@konsola.in" class="contact__link">
+                    contact@konsola.in
+                  </a>
+                </li>
+                <li class="contact__item">
+                  <i class="fas fa-globe"></i>
+
+                  <a href="konsola.in" class="contact__link" target="_blank">
+                    konsola.in
+                  </a>
+                </li>
+              </ul>
+            </h2>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <p class="footer__copy">Copyright &copy; 2021, Krypton</p>
       <ul class="footer__list">
